namespace-rules.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "egress-inside-namespace-asciinema"
  namespace: asciinema
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: asciinema
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: asciinema
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "ingress-inside-namespace-asciinema"
  namespace: asciinema
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: asciinema
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: asciinema
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "egress-to-smtp-server"
  namespace: asciinema
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: asciinema
  egress:
    - toPorts:
      - ports:
        - port: "587"
          protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-from-default-smtp"
  namespace: asciinema
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: asciinema
      app: asciinema-backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: default
    toPorts:
    - ports:
      - port: "25"
        protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-from-default-nginx"
  namespace: asciinema
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: asciinema
      app: asciinema-frontend
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: default
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-from-default-redis"
  namespace: asciinema
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: asciinema
      app: asciinema-backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: default
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-to-kubedns"
  namespace: asciinema
spec:
  endpointSelector:
    {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
